--- a/assets/styles/bio.css
+++ b/assets/styles/bio.css
@@ -1,13 +1,14 @@
 .citacao-bio {
 	background-color: #D9E5E3;
-	border: 10px solid #C2CCCA;
-	width: 290px;
+	border: 0.3em solid #C2CCCA;
+	width: 30ch;
+	padding: 1em;
+	margin: 1em 2em;
 	box-sizing: border-box;
-	margin: 20px 40px;
-	padding: 20px;
+
 }
 
-.citacao-bio fiat{
+.citacao-bio fiat {
 	float: right;
 }
 
